--- a/nanopore/Snakefile
+++ b/nanopore/Snakefile
@@ -19,12 +19,22 @@ rule all:
 		# expand("{path}/quality/nanoplot/{strain}/{strain}_{demultiplex}NanoPlot-report.html", path = config["path"], strain = config["strains"], demultiplex = config["preprocessing"]),
 		# 
 		# Canu
-		expand("{path}/assembly/{strain}_{demultiplex}_canu/{strain}_{demultiplex}_canu.contigs.fasta", path = config["path"], strain = config["strains"], demultiplex = config["preprocessing"]),
+		# expand("{path}/assembly/{strain}_{demultiplex}_canu/{strain}_{demultiplex}_canu.contigs.fasta", path = config["path"], strain = config["strains"], demultiplex = config["preprocessing"]),
 		# Flye
-		expand("{path}/assembly/{strain}_{demultiplex}_flye/{strain}_{demultiplex}_flye.contigs.fasta", path = config["path"], strain = config["strains"], demultiplex = config["preprocessing"]),
+		# expand("{path}/assembly/{strain}_{demultiplex}_flye/{strain}_{demultiplex}_flye.contigs.fasta", path = config["path"], strain = config["strains"], demultiplex = config["preprocessing"]),
 		# wtdbg2
-		expand("{path}/assembly/{strain}_{demultiplex}_wtdbg2/{strain}_{demultiplex}_wtdbg2.contigs.fasta", path = config["path"], strain = config["strains"], demultiplex = config["preprocessing"])
-		
+		# expand("{path}/assembly/{strain}_{demultiplex}_wtdbg2/{strain}_{demultiplex}_wtdbg2.contigs.fasta", path = config["path"], strain = config["strains"], demultiplex = config["preprocessing"]),
+		# 
+		# Racon
+		# expand("{path}/postprocessing/{strain}_{demultiplex}_{assembler}/{strain}_{demultiplex}_{assembler}4.contigs.fasta", path = config["path"], strain = config["strains"], demultiplex = config["preprocessing"], assembler = config["assembly"]),
+		# medaka
+		expand("{path}/postprocessing/{strain}_{assembler}_{demultiplex}/consensus.fasta", path = config["path"], strain = config["strains"], demultiplex = config["preprocessing"], assembler = config["assembly"])
+		# 
+		# quast
+		expand("{path}/quality/quast/{strain}/report.html", path = config["path"], strain = config["strains"]),
+		expand("{path}/quality/quast/report.html", path = config["path"])
+
+
 rule create:
 	shell:
 		'python create.py'
@@ -210,26 +220,25 @@ rule wtdbg2_convert:
 	shell:
 		'wtdbg-cns -t {threads} -i {input.ctg} -o {output.contigs}'
 
-
 # polishing with racon four times		use minimap2 for the mapping inbetween the polishing
 rule minimap2_racon:
 	input:
-		assembly = '{path}/assembly/{strain}_{demultiplex}_{assembler}/{strain}_{demultiplex}_{assembler}.contigs.fasta',
-		reads = '{path}/preprocessing/{demultiplex}/{strain}_{demultiplex}.fastq'
+		assembly = '/mnt/prostlocal2/projects/st_mycoplasma_assembly/nanopore/assembly/{strain}_{demultiplex}_{assembler}/{strain}_{demultiplex}_{assembler}.contigs.fasta',
+		reads = '/mnt/prostlocal2/projects/st_mycoplasma_assembly/nanopore/preprocessing/{demultiplex}/{strain}_{demultiplex}.fastq'
 	output:
-		out = '/mnt/prostlocal2/projects/st_mycoplasma_assembly_docker/racon/nanopore/{strain}_{demultiplex}_{assembler}/{strain}_{demultiplex}_{assembler}4.contigs.fasta'
+		out = '/mnt/prostlocal2/projects/st_mycoplasma_assembly_docker/racon/nanopore/{strain}_{demultiplex}_{assembler}4.contigs.fasta'
 	params:
 		strain = '{strain}',
 		demultiplex = '{demultiplex}',
 		assembler = '{assembler}',
-		path = '{path}'
-	threads: 32
+		path = '/mnt/prostlocal2/projects/st_mycoplasma_assembly/nanopore'
+	threads: 24
 	run:
 		import os
 		import time
 		reads_path = str(params.path) + '/preprocessing/' + str(params.demultiplex) + '/'
 		only_reads = str(params.strain) + '_' + str(params.demultiplex) + '.fastq'
-		racon_path = '/mnt/prostlocal2/projects/st_mycoplasma_assembly_docker/racon/nanopore' + str(params.strain) + '_' + str(params.demultiplex) + '_' + str(params.assembler) + '/'
+		racon_path = '/mnt/prostlocal2/projects/st_mycoplasma_assembly_docker/racon/nanopore/'
 		assembly_path = str(params.path) + '/assembly/' + str(params.strain) + '_' + str(params.demultiplex) + '_' + str(params.assembler) + '/'
 		paf_path = str(params.path) + '/postprocessing/' + str(params.strain) + '_' + str(params.demultiplex) + '_' + str(params.assembler) + '/'
 		assembly_file = str(params.strain) + '_' + str(params.demultiplex) + '_' + str(params.assembler) + '.contigs.fasta'
@@ -242,15 +251,15 @@ rule minimap2_racon:
 				racon_in_assembly = out_assembly
 			out_assembly = str(params.strain) + '_' + str(params.demultiplex) + '_' + str(params.assembler) + str(i + 1) + '.contigs.fasta'
 			paf = str(params.strain) + '_' + str(params.demultiplex) + '_' + str(params.assembler)+ str(i + 1) + '.paf'
-			minimap2 = 'minimap2 -x map-ont -t 16 ' + minimap2_input_assembly + ' ' + reads_path + only_reads + ' > ' + paf_path + paf
+			minimap2 = 'minimap2 -x map-ont -t 24 ' + minimap2_input_assembly + ' ' + reads_path + only_reads + ' > ' + paf_path + paf
 			print(minimap2 + '\n')
 			os.system(minimap2)
 			while os.path.isfile(paf_path + paf) == False:
 				time.sleep(5)
 			if i == 0:
-				racon = 'docker run --rm --user $(id -u):$(id -g) -it -v ' + reads_path + ':/input1 -v ' + paf_path + ':/input2 -v ' + assembly_path + ':/input3 -v ' + racon_path + ':/output quay.io/biocontainers/racon:1.3.2--he941832_0 sh -c "racon -t 32 /input1/' + only_reads + ' /input2/' + paf + ' /input3/' + racon_in_assembly + ' > /output/' + out_assembly + '"'
+				racon = 'docker run --rm --user $(id -u):$(id -g) -it -v ' + reads_path + ':/input1 -v ' + paf_path + ':/input2 -v ' + assembly_path + ':/input3 -v ' + racon_path + ':/output quay.io/biocontainers/racon:1.3.2--he941832_0 sh -c "racon -t 24 /input1/' + only_reads + ' /input2/' + paf + ' /input3/' + racon_in_assembly + ' > /output/' + out_assembly + '"'
 			else:
-				racon = 'docker run --rm --user $(id -u):$(id -g) -it -v ' + reads_path + ':/input1 -v ' + paf_path + ':/input2 -v ' + racon_path + ':/input3 -v ' + racon_path + ':/output quay.io/biocontainers/racon:1.3.2--he941832_0 sh -c "racon -t 32 /input1/' + only_reads + ' /input2/' + paf + ' /input3/' + racon_in_assembly + ' > /output/' + out_assembly + '"'
+				racon = 'docker run --rm --user $(id -u):$(id -g) -it -v ' + reads_path + ':/input1 -v ' + paf_path + ':/input2 -v ' + racon_path + ':/input3 -v ' + racon_path + ':/output quay.io/biocontainers/racon:1.3.2--he941832_0 sh -c "racon -t 24 /input1/' + only_reads + ' /input2/' + paf + ' /input3/' + racon_in_assembly + ' > /output/' + out_assembly + '"'
 			print(racon + '\n')			
 			os.system(racon)
 		
