--- a/hybrid/config_myco_doubice.yaml
+++ b/hybrid/config_myco_doubice.yaml
@@ -2,4 +2,5 @@ path: {/mnt/prostlocal2/projects/st_mycoplasma_assembly}
 strains: {15DD0163,17DD0007,17DD0020}
 preprocessing: {porechop,deepbinner}
 assembly: {spades,unicycler}
+assembly2: {canu,flye,wtdbg2}
 quality: {quast}
