--- a/hybrid/Snakefile
+++ b/hybrid/Snakefile
@@ -20,15 +20,15 @@ rule all:
 		# expand("{path}/hybrid_new/quality/nanoplot/{strain}/{strain}_{demultiplex}NanoPlot-report.html", path = config["path"], strain = config["strains"], demultiplex = config["demultiplexing"])
 		# 
 		# preprocess short reads
-		expand("{path}/hybrid_new/preprocessing/{strain}_all_short_unique.fastq", path = config["path"], strain = config["strains"]),
+		# expand("{path}/hybrid_new/preprocessing/{strain}_all_short_unique.fastq", path = config["path"], strain = config["strains"]),
 		# 
 		# assembly
 		expand("{path}/hybrid_new/assembly/{strain}_{demultiplex}_{assembler}/{strain}_{demultiplex}_{assembler}.contigs.fasta", path = config["path"], strain = config["strains"], demultiplex = config["demultiplexing"], assembler = config["assembly"]),
 		# 
 		# polishing - 4x Racon long -> medaka -> 4x Racon short
-		expand("{path}/hybrid_new/postprocessing/{strain}_{demultiplex}_{assembler}/{strain}_{demultiplex}_{assembler}_long4.contigs.fasta", path = config["path"], strain = config["strains"], demultiplex = config["demultiplexing"], assembler = config["assembly"]),
-		expand("{path}/hybrid_new/postprocessing/{strain}_{demultiplex}_{assembler}/consensus.fasta", path = config["path"], strain = config["strains"], demultiplex = config["demultiplexing"], assembler = config["assembly"]),
-		expand("{path}/hybrid_new/postprocessing/{strain}_{demultiplex}_{assembler}/{strain}_{demultiplex}_{assembler}_short4.contigs.fasta", path = config["path"], strain = config["strains"], demultiplex = config["demultiplexing"], assembler = config["assembly"]),
+		# expand("{path}/hybrid_new/postprocessing/{strain}_{demultiplex}_{assembler}/{strain}_{demultiplex}_{assembler}_long4.contigs.fasta", path = config["path"], strain = config["strains"], demultiplex = config["demultiplexing"], assembler = config["assembly"]),
+		# expand("{path}/hybrid_new/postprocessing/{strain}_{demultiplex}_{assembler}/consensus.fasta", path = config["path"], strain = config["strains"], demultiplex = config["demultiplexing"], assembler = config["assembly"]),
+		# expand("{path}/hybrid_new/postprocessing/{strain}_{demultiplex}_{assembler}/{strain}_{demultiplex}_{assembler}_short4.contigs.fasta", path = config["path"], strain = config["strains"], demultiplex = config["demultiplexing"], assembler = config["assembly"]),
 		# 
 		# QUAST
 		expand("{path}/hybrid_new/quality/quast/{strain}/report.html", path = config["path"], strain = config["strains"])
@@ -345,9 +345,9 @@ rule flye:
 		'/mnt/prostlocal2/projects/st_mycoplasma_assembly/git/flye.yml'
 	params:
 		outputdir = '{path}/hybrid_new/assembly/{strain}_{demultiplex}_flye/',
-	threads: 16
+	threads: 32
 	shell:
-		'flye --nano-raw {input} -o {params.outputdir} -t {threads} -g 1000000'
+		'flye --asm-coverage 50 --nano-raw {input} -o {params.outputdir} -t {threads} -g 1000000'
 
 # rename flye output
 rule rename_flye:
@@ -446,7 +446,7 @@ rule medaka:
 		'/mnt/prostlocal2/projects/st_mycoplasma_assembly/git/postprocessing.yml'
 	params:
 		outputdir = '{path}/hybrid_new/postprocessing/{strain}_{demultiplex}_{assembler}/'
-	threads: 16
+	threads: 32
 	shell:
 		'medaka_consensus -i {input.reads} -d {input.racon_out} -o {params.outputdir} -t {threads} -m r941_min_high'
 
@@ -467,7 +467,7 @@ rule minimap2_racon_short:
 		import os
 		import time
 		reads_path = str(params.path) + '/preprocessing/'
-		only_reads = str(params.strain) + '_all_unique.fastq'
+		only_reads = str(params.strain) + '_all_short_unique.fastq'
 		racon_path = '/mnt/prostlocal2/projects/st_mycoplasma_assembly_docker/racon/hybrid_new/'
 		assembly_path = str(params.path) + '/postprocessing/' +  str(params.strain) + '_' + str(params.demultiplex) + '_' + str(params.assembler) + '/'
 		paf_path = str(params.path) + '/postprocessing/' + str(params.strain) + '_' + str(params.demultiplex) + '_' + str(params.assembler) + '/'
@@ -504,20 +504,20 @@ rule move_racon_short:
 
 rule quast:
 	input:
-		in1 = '{path}/hybrid_new/postprocessing/{strain}_porechop_canu_short4.contigs.fasta',
-		in2 = '{path}/hybrid_new/postprocessing/{strain}_deepbinner_canu_short4.contigs.fasta',
-		in3 = '{path}/hybrid_new/postprocessing/{strain}_porechop_flye_short4.contigs.fasta',
-		in4 = '{path}/hybrid_new/postprocessing/{strain}_deepbinner_flye_short4.contigs.fasta',
-		in5 = '{path}/hybrid_new/postprocessing/{strain}_porechop_wtdbg2_short4.contigs.fasta',
-		in6 = '{path}/hybrid_new/postprocessing/{strain}_deepbinner_wtdbg2_short4.contigs.fasta'
+		in1 = '{path}/hybrid_new/postprocessing/{strain}_porechop_canu/{strain}_porechop_canu_short4.contigs.fasta',
+		in2 = '{path}/hybrid_new/postprocessing/{strain}_deepbinner_canu/{strain}_deepbinner_canu_short4.contigs.fasta',
+		in3 = '{path}/hybrid_new/postprocessing/{strain}_porechop_flye/{strain}_porechop_flye_short4.contigs.fasta',
+		in4 = '{path}/hybrid_new/postprocessing/{strain}_deepbinner_flye/{strain}_deepbinner_flye_short4.contigs.fasta',
+		in5 = '{path}/hybrid_new/postprocessing/{strain}_porechop_wtdbg2/{strain}_porechop_wtdbg2_short4.contigs.fasta',
+		in6 = '{path}/hybrid_new/postprocessing/{strain}_deepbinner_wtdbg2/{strain}_deepbinner_wtdbg2_short4.contigs.fasta'
 	output:
 		report = '{path}/hybrid_new/quality/quast/{strain}/report.html'
 		#...
 	conda:
 		'/mnt/prostlocal2/projects/st_mycoplasma_assembly/git/assembly_quality.yml'
 	params:
-		outputdir = '{path}/hybrid_new/quality/quast/',
+		outputdir = '{path}/hybrid_new/quality/quast/{strain}',
 		path = '{path}'
 	threads: 16
 	shell:
-		'quast {input.in1} {input.in2} {input.in3} {input.in4} {input.in5} {input.in6} -r {params.path}/mycoplasma_bovis_referenceGenome.fasta -g {params.path}/GCF_000183385.1_ASM18338v1_genomic.gff -o {params.outputdir}'
+		'quast {input.in1} {input.in2} {input.in3} {input.in4} {input.in5} {input.in6} -r /mnt/prostlocal2/projects/st_mycoplasma_assembly/mycoplasma_bovis_genomes/mycoplasma_bovis_referenceGenome.fasta -g /mnt/prostlocal2/projects/st_mycoplasma_assembly/mycoplasma_bovis_genomes/GCF_000183385.1_ASM18338v1_genomic.gff -o {params.outputdir}'
