--- a/hybrid/Snakefile
+++ b/hybrid/Snakefile
@@ -347,7 +347,7 @@ rule flye:
 		outputdir = '{path}/hybrid_new/assembly/{strain}_{demultiplex}_flye/',
 	threads: 16
 	shell:
-		'flye --nano-raw {input} -o {params.outputdir} -t {threads} -g 1000000'
+		'flye --asm-coverage 50 --nano-raw {input} -o {params.outputdir} -t {threads} -g 1000000'
 
 # rename flye output
 rule rename_flye:
@@ -504,14 +504,18 @@ rule move_racon_short:
 
 rule quast:
 	input:
-		in1 = '{path}/hybrid_new/postprocessing/{strain}_porechop_canu_short4.contigs.fasta',
-		in2 = '{path}/hybrid_new/postprocessing/{strain}_deepbinner_canu_short4.contigs.fasta',
-		in3 = '{path}/hybrid_new/postprocessing/{strain}_porechop_flye_short4.contigs.fasta',
-		in4 = '{path}/hybrid_new/postprocessing/{strain}_deepbinner_flye_short4.contigs.fasta',
-		in5 = '{path}/hybrid_new/postprocessing/{strain}_porechop_wtdbg2_short4.contigs.fasta',
-		in6 = '{path}/hybrid_new/postprocessing/{strain}_deepbinner_wtdbg2_short4.contigs.fasta'
+		in1 = '{path}/hybrid_new/postprocessing/11DD0261_porechop_flye_short4.contigs.fasta',
+		in2 = '{path}/hybrid_new/postprocessing/13DD0918_porechop_flye_short4.contigs.fasta',
+		in3 = '{path}/hybrid_new/postprocessing/14DD0148_porechop_flye_short4.contigs.fasta',
+		in4 = '{path}/hybrid_new/postprocessing/14DD0156_porechop_flye_short4.contigs.fasta',
+		in5 = '{path}/hybrid_new/postprocessing/14DD0457ML_porechop_flye_short4.contigs.fasta',
+		in6 = '{path}/hybrid_new/postprocessing/15DD0123_porechop_flye_short4.contigs.fasta',
+		in7 = '{path}/hybrid_new/postprocessing/15DD0140_porechop_flye_short4.contigs.fasta',
+		in8 = '{path}/hybrid_new/postprocessing/15DD0141_porechop_flye_short4.contigs.fasta',
+		in9 = '{path}/hybrid_new/postprocessing/15DD0160_porechop_flye_short4.contigs.fasta',
+		in10 = '{path}/hybrid_new/postprocessing/15DD0161_porechop_flye_short4.contigs.fasta'
 	output:
-		report = '{path}/hybrid_new/quality/quast/{strain}/report.html'
+		report = '{path}/hybrid_new/quality/quast/report.html'
 		#...
 	conda:
 		'/mnt/prostlocal2/projects/st_mycoplasma_assembly/git/assembly_quality.yml'
@@ -520,4 +524,4 @@ rule quast:
 		path = '{path}'
 	threads: 16
 	shell:
-		'quast {input.in1} {input.in2} {input.in3} {input.in4} {input.in5} {input.in6} -r {params.path}/mycoplasma_bovis_referenceGenome.fasta -g {params.path}/GCF_000183385.1_ASM18338v1_genomic.gff -o {params.outputdir}'
+		'quast {input.in1} {input.in2} {input.in3} {input.in4} {input.in5} {input.in6} {input.in7} {input.in8} {input.in9} {input.in10} -r {params.path}/mycoplasma_bovis_referenceGenome.fasta -g {params.path}/GCF_000183385.1_ASM18338v1_genomic.gff -o {params.outputdir}'
