--- a/hybrid/config.yaml
+++ b/hybrid/config.yaml
@@ -1,5 +1,5 @@
 path: {/mnt/prostlocal2/projects/st_mycoplasma_assembly}
-strains: {11DD0261,13DD0918,14DD0148,14DD0156,14DD0457ML,15DD0123,15DD0140,15DD0141,15DD0160,15DD0161}
+strains: {11DD0261,13DD0918,14DD0148,14DD0156,14DD0457,15DD0123,15DD0140,15DD0141,15DD0160,15DD0161}
 preprocessing: {fastp,trimmomatic}
 demultiplexing: {porechop}
 assembly: {flye}
